--- a/BusquedaDanielV1/app/src/main/res/layout/activity_listar_pedidos.xml
+++ b/BusquedaDanielV1/app/src/main/res/layout/activity_listar_pedidos.xml
@@ -13,16 +13,16 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:text="Lista de Pedidos"
+        android:text="@string/lista_de_pedidos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="25sp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/RvLitaPedidos"
+    <ListView
+        android:id="@+id/lvListarPedidos"
         android:layout_width="368dp"
-        android:layout_height="429dp"
+        android:layout_height="485dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -31,4 +31,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+
 </android.support.constraint.ConstraintLayout>
